--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <header>
 	<nav class="navbar navbar-light bg-light">
   <a class="navbar-brand"><i class="fab fa-fort-awesome"></i></a>
-	<div class="navbar-nav">SS</div>
+	<div class="navbar-nav">Home</div>
+	<div class="navbar-nav">Info</div>
+	<div class="navbar-nav">Contact</div>
   <form class="form-inline">
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
