--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
 </header>
 <body>
 
-	<div class="bg-slider">
+<main>
+	<h1 class="text-light bg-warning">Welcome to Chatan!</h1>
+
+	<div id="carousel-chatan" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://crayonimg.e-shops.jp/cms-dimg/1047531/195503/600_450.jpg">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://t-ec.bstatic.com/xdata/images/hotel/max500/124351844.jpg?k=b569a6e3cdb959aeb8f9df51ac097229426f6f58d1968f5a3d77e59888807379&o=">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://media-cdn.tripadvisor.com/media/daodao/photo-s/0f/c9/df/4b/photo4jpg.jpg">
+    </div>
+  </div>
+</div>
+</main>
+
+
+	<!-- <div class="bg-slider">
   
   	<div class="container-fluid mt-5">
 	  	<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -36,7 +55,7 @@
 			    </div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
