--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 		</div>
 
 	<div class="row justify-content-center">
-		<div class="card col-4">
+		<div class="card col-4" style="width: 100px;">
 	  	<img class="card-img-top" src="https://crayonimg.e-shops.jp/cms-dimg/1047531/195503/600_450.jpg" alt="Card image cap">
 	  	<div class="card-body">
-	    	<h5 class="card-title">Card title</h5>
+	    	<h5 class="card-title">American Village</h5>
 	    	<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, illum!</p>
 	    	<a href="#" class="btn btn-primary">Go somewhere</a>
 	  	</div>
@@ -52,7 +52,7 @@
 		<div class="card col-4">
 	  	<img class="card-img-top" src="https://t-ec.bstatic.com/xdata/images/hotel/max500/124351844.jpg?k=b569a6e3cdb959aeb8f9df51ac097229426f6f58d1968f5a3d77e59888807379&o=" alt="Card image cap">
 	  	<div class="card-body">
-	    	<h5 class="card-title">Card title</h5>
+	    	<h5 class="card-title">Sea</h5>
 	    	<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, illum!</p>
 	    	<a href="#" class="btn btn-primary">Go somewhere</a>
 	  	</div>
@@ -60,7 +60,7 @@
 		<div class="card col-4">
 	  	<img class="card-img-top" src="https://media-cdn.tripadvisor.com/media/daodao/photo-s/0f/c9/df/4b/photo4jpg.jpg" alt="Card image cap">
 	  	<div class="card-body">
-	    	<h5 class="card-title">Card title</h5>
+	    	<h5 class="card-title">Shopping</h5>
 	    	<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, illum!</p>
 	    	<a href="#" class="btn btn-primary">Go somewhere</a>
 	  	</div>
