--- a/index.html
+++ b/index.html
@@ -40,27 +40,8 @@
 </div>
 </main>
 
-
-	<!-- <div class="bg-slider">
-  
-  	<div class="container-fluid mt-5">
-	  	<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-	  		<div class="carousel-inner">
-			    <div class="carousel-item active">
-			      <img class="d-block w-100" src="https://crayonimg.e-shops.jp/cms-dimg/1047531/195503/600_450.jpg" alt="First slide">
-			    </div>
-			    <div class="carousel-item">
-			      <img class="d-block w-100" src="https://t-ec.bstatic.com/xdata/images/hotel/max500/124351844.jpg?k=b569a6e3cdb959aeb8f9df51ac097229426f6f58d1968f5a3d77e59888807379&o=" alt="Second slide">
-			    </div>
-			    <div class="carousel-item">
-			      <img class="d-block w-100" src="https://media-cdn.tripadvisor.com/media/daodao/photo-s/0f/c9/df/4b/photo4jpg.jpg" alt="Third slide">
-			    </div>
-				</div>
-			</div>
-		</div> -->
-
-	<div class="row justify-content-center">
-		<div class="card col-4" style="width: 100px;">
+	<div class="row justify-content-center mt-5 mb-5">
+		<div class="card col-3" style="width: 100px;">
 	  	<img class="card-img-top" src="https://crayonimg.e-shops.jp/cms-dimg/1047531/195503/600_450.jpg" alt="Card image cap">
 	  	<div class="card-body">
 	    	<h5 class="card-title">American Village</h5>
@@ -68,7 +49,7 @@
 	    	<a href="#" class="btn btn-primary">Go somewhere</a>
 	  	</div>
 		</div>
-		<div class="card col-4">
+		<div class="card col-3 ml-5 mr-5">
 	  	<img class="card-img-top" src="https://t-ec.bstatic.com/xdata/images/hotel/max500/124351844.jpg?k=b569a6e3cdb959aeb8f9df51ac097229426f6f58d1968f5a3d77e59888807379&o=" alt="Card image cap">
 	  	<div class="card-body">
 	    	<h5 class="card-title">Sea</h5>
@@ -76,7 +57,7 @@
 	    	<a href="#" class="btn btn-primary">Go somewhere</a>
 	  	</div>
 		</div>
-		<div class="card col-4">
+		<div class="card col-3">
 	  	<img class="card-img-top" src="https://media-cdn.tripadvisor.com/media/daodao/photo-s/0f/c9/df/4b/photo4jpg.jpg" alt="Card image cap">
 	  	<div class="card-body">
 	    	<h5 class="card-title">Shopping</h5>
