ボタン完成

--- a/index2.html
+++ b/index2.html
@@ -23,11 +23,13 @@
   </div>
 
   <div class="col-xl-4">
-    <div class="row mt-3">
+    <div class="row mt-5">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt vero ab numquam nobis cupiditate ipsa eligendi ratione culpa, recusandae voluptas a sapiente officia quisquam earum iusto excepturi. Itaque sint, ipsum.
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quo placeat aperiam, mollitia earum esse sit consequuntur ea numquam cumque porro doloribus ipsum, fuga eum quia expedita voluptas fugit ut!
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis illum aliquam cupiditate repellat consequuntur earum, animi numquam vitae ipsum nemo voluptatum voluptatem possimus, commodi est tenetur exercitationem natus beatae illo.
     </div>
+
+    <div class="col-6 btn btn-success mt-5">More information</div>
    
   </div>
   </div>
