--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
 	  	</div>
 		</div>
 	</div>
+	<footer>
+		<nav aria-label="breadcrumb">
+ 			<ol class="breadcrumb">
+    		<li class="breadcrumb-item"><a href="#">Home</a></li>
+    		<li class="breadcrumb-item"><a href="#">Library</a></li>
+  		</ol>
+		</nav>
+	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
