--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,7 @@
   <title>chatan2</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
+<body>
   <header>
     <nav class="navbar navbar-light bg-dark">
       <a class="navbar-brand"><i class="fab fa-font-awesome"></i></a>
@@ -14,12 +15,12 @@
       </form>
     </nav>
   </header>
-<body>
 
-  <h2 class="text-warning mt-2 ml-3">American Village</h2>
+  <main>
+  <h2 class="text-warning mt-2 ml-5">American Village</h2>
   <div class="row">
-  <div class="col-md-6">
-    <img class="mt-2" src="https://crayonimg.e-shops.jp/cms-dimg/1047531/195503/600_450.jpg" alt="">
+  <div class="col-md-6 mb-3">
+    <img class="mt-2 ml-3" src="https://crayonimg.e-shops.jp/cms-dimg/1047531/195503/600_450.jpg" alt="">
   </div>
 
   <div class="col-xl-4">
@@ -30,10 +31,17 @@
     </div>
 
     <div class="col-6 btn btn-success mt-5">More information</div>
-   
+    </div>
   </div>
-  </div>
-  
+  </main>
+  <footer>
+    <nav class="navbar navbar-light bg-dark">
+      <a class="navbar-brand"><i class="fab fa-font-awesome"></i></a>
+      <form class="form-inline">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </nav>
+  </footer>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
