リンク追加

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	  	<div class="card-body">
 	    	<h5 class="card-title">American Village</h5>
 	    	<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, illum!</p>
-	    	<a href="#" class="btn btn-primary">Go somewhere</a>
+	    	<a href="file:///C:/Users/gekys/Downloads/index2.html" class="btn btn-primary">Go somewhere</a>
 	  	</div>
 		</div>
 		<div class="card col-3 ml-5 mr-5">
